--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -19,3 +19,10 @@
    width: 0px;
    position: absolute;
  }
+
+ .toggle-sound {
+   width: 50px;
+   height: 50px;
+   background-color: white;
+   border: 1px solid black;
+ }
