--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -36,7 +36,8 @@ time, mark, audio, video {
 }
 
 body {
-  background-color: ghostwhite;
+  background: rgba(155, 221, 185, 0.5);
+  color: white;
   font-family: 'Roboto', sans-serif;
 }
 
@@ -49,6 +50,6 @@ body {
  .toggle-sound {
    width: 50px;
    height: 50px;
-   background-color: white;
+   background-color: black;
    border: 1px solid black;
  }
