--- a/app/assets/stylesheets/graph.css
+++ b/app/assets/stylesheets/graph.css
@@ -7,31 +7,30 @@
 
 #titleBox {
   display: flex;
-  flex-direction: column;
-  justify-content: center;
+  flex-direction: row;
+  justify-content: flex-end;
   align-items: center;
-  height: 80px;
+  width: 100%;
+  height: 50px;
+  background-color: white;
+  border-bottom: 1px solid #ccc;
+  color: rgba(255, 123, 109, 1);
 }
 
 #titleArtist {
   font-size: 20px;
+  margin-right: auto;
+  margin-left: 50px;
 }
 
 #titleDate {
   font-size: 16px;
+  margin-right: 50px;
 }
 
 #trackList {
-  background-color: azure;
-  border: 1px solid #ccc;
-  width: 500px;
-  border-radius: 20px;
-  top: 100;
+  width: 300px;
   height: 500px;
-}
-
-.trackBox:nth-child(10) {
-  border-bottom: none;
 }
 
 .trackBox {
@@ -40,7 +39,10 @@
   justify-content: center;
   align-items: center;
   height: 50px;
-  border-bottom: 1px solid #ccc;
+  background-color: rgba(255, 123, 109, 0.5);
+  border: 1px solid rgb(177,156,217);
+  border-radius: 5px;
   width: inherit;
-  margin-top: 30px;
+  margin-bottom: 15px;
+  transition: all 7s;
 }
