--- a/app/assets/stylesheets/graph.css
+++ b/app/assets/stylesheets/graph.css
@@ -5,6 +5,16 @@
   align-items: center;
 }
 
+#stagingArea {
+  width: 100%;
+  height: 53px;
+  margin-bottom: 50px;
+  background-color: rgb(155, 221, 185);
+  position: absolute;
+  top: 630px;
+  border-top: 1px solid black;
+}
+
 #titleBox {
   display: flex;
   flex-direction: row;
