--- a/app/assets/stylesheets/graph.css
+++ b/app/assets/stylesheets/graph.css
@@ -50,7 +50,7 @@
   align-items: center;
   height: 50px;
   background-color: rgba(255, 123, 109, 0.5);
-  border: 1px solid rgb(177,156,217);
+  border: 1px solid white;
   border-radius: 5px;
   width: inherit;
   margin-bottom: 15px;
