--- a/app/assets/stylesheets/graph.css
+++ b/app/assets/stylesheets/graph.css
@@ -47,3 +47,11 @@
   margin-bottom: 15px;
   transition: all 3s linear;
 }
+
+#stagingArea {
+  width: 100%;
+  height: 53px;
+  background: rgb(155, 221, 185);
+  position: relative;
+  border-top: 1px solid black;
+}
