--- a/app/assets/stylesheets/graph.css
+++ b/app/assets/stylesheets/graph.css
@@ -3,16 +3,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-}
-
-#stagingArea {
-  width: 100%;
-  height: 53px;
-  margin-bottom: 50px;
-  background-color: rgb(155, 221, 185);
-  position: absolute;
-  top: 630px;
-  border-top: 1px solid black;
+  height: 579px;
 }
 
 #titleBox {
@@ -55,4 +46,12 @@
   width: inherit;
   margin-bottom: 15px;
   transition: all 3s linear;
+}
+
+#stagingArea {
+  width: 100%;
+  height: 53px;
+  background: rgb(155, 221, 185);
+  position: relative;
+  border-top: 1px solid black;
 }
