--- a/app/assets/stylesheets/graph.css
+++ b/app/assets/stylesheets/graph.css
@@ -30,8 +30,8 @@
 }
 
 #trackList {
-  width: 300px;
-  height: 500px;
+  width: 250px;
+  height: 100%;
 }
 
 .trackBox {
@@ -54,4 +54,11 @@
   background: rgb(155, 221, 185);
   position: relative;
   border-top: 1px solid black;
+}
+
+#chart {
+  width: 700px;
+  height: 520px;
+  background-color: black;
+  border-left: 1px solid white;
 }
