--- a/app/assets/stylesheets/graph.css
+++ b/app/assets/stylesheets/graph.css
@@ -45,7 +45,7 @@
   border-radius: 5px;
   width: inherit;
   margin-bottom: 15px;
-  transition: all 3s linear;
+  transition: all 2930ms linear;
 }
 
 #stagingArea {
