--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -34,9 +34,9 @@ time, mark, audio, video {
 	font: inherit;
 	vertical-align: baseline;
 }
-
+/*rgb(155, 221, 185)*/
 body {
-  background: rgb(155, 221, 185);
+  background: black;
   color: white;
   font-family: 'Roboto', sans-serif;
 }
