--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -36,7 +36,7 @@ time, mark, audio, video {
 }
 
 body {
-  background: rgb(155, 221, 185);
+  background: black;
   color: white;
   font-family: 'Roboto', sans-serif;
 }
