--- a/app/assets/stylesheets/datepicker.css
+++ b/app/assets/stylesheets/datepicker.css
@@ -1,5 +1,5 @@
 #datePicker {
-  width: 400px;
+  width: 300px;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -40,7 +40,7 @@
 }
 
 .decadeYear:hover {
-  color: rgba(255, 123, 109, 0.5);
+  color: mediumaquamarine;
   transition: color .2s;
   cursor: pointer;
 }
@@ -56,7 +56,7 @@
 }
 
 .month:hover {
-  color: rgba(255, 123, 109, 0.5);
+  color: mediumaquamarine;
   transition: color .2s;
   cursor: pointer;
 }
