--- a/app/assets/stylesheets/graph.css
+++ b/app/assets/stylesheets/graph.css
@@ -9,7 +9,7 @@
 #titleBox {
   display: flex;
   flex-direction: row;
-  justify-content: flex-end;
+  justify-content: center;
   align-items: center;
   width: 100%;
   height: 50px;
@@ -17,17 +17,30 @@
   border-bottom: 1px solid #ccc;
   color: white;
   font-family: 'Roboto', sans-serif;
+  font-weight: 300;
+  font-size: 20px;
+}
+
+#navLogo {
+  position: absolute;
+  left: 10px;
+}
+
+#billboard-logo {
+  margin-right: 10px;
 }
 
 #titleArtist {
-  font-size: 20px;
-  margin-right: auto;
-  margin-left: 50px;
+  color: mediumaquamarine;
+  /*margin-right: auto;*/
+  margin-right: 7px;
+  /*margin-left: 50px;*/
 }
 
 #titleDate {
-  font-size: 16px;
-  margin-right: 50px;
+  color: #FF6961;
+  margin-left: 7px;
+  /*margin-right: 50px;*/
 }
 
 #trackList {
@@ -44,10 +57,10 @@
 .trackBox {
   display: flex;
   flex-direction: row;
-  justify-content: flex-start;;
+  justify-content: flex-start;
   align-items: center;
   height: 50px;
-  border-radius: 5px;
+  font-weight: 300;
   width: inherit;
   margin-bottom: 15px;
   transition: all 2920ms linear;
@@ -67,4 +80,46 @@
   height: 520px;
   background-color: black;
   border-left: 1px solid white;
+}
+
+@-webkit-keyframes hvr-pulse {
+  25% {
+    -webkit-transform: scale(1.1);
+    transform: scale(1.1);
+  }
+
+  75% {
+    -webkit-transform: scale(0.9);
+    transform: scale(0.9);
+  }
+}
+
+@keyframes hvr-pulse {
+  25% {
+    -webkit-transform: scale(1.1);
+    transform: scale(1.1);
+  }
+
+  75% {
+    -webkit-transform: scale(0.9);
+    transform: scale(0.9);
+  }
+}
+
+.hvr-pulse {
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: translateZ(0);
+  transform: translateZ(0);
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-animation-name: hvr-pulse;
+  animation-name: hvr-pulse;
+  -webkit-animation-duration: 1s;
+  animation-duration: 1s;
+  -webkit-animation-timing-function: linear;
+  animation-timing-function: linear;
+  -webkit-animation-iteration-count: infinite;
+  animation-iteration-count: infinite;
 }
