--- a/app/assets/stylesheets/datepicker.css
+++ b/app/assets/stylesheets/datepicker.css
@@ -6,18 +6,21 @@
   justify-content: center;
   height: 579px;
   margin-left: 25px;
+  margin-right: 10px;
 }
 
 #datePickerHeader {
   display: flex;
   flex-direction: row;
-  margin-bottom: 10px;
+  padding-bottom: 25px;
+  margin-top: 46px;
 }
 
 #datePickerHeader span {
   margin-left: 8px;
   margin-right: 8px;
-  font-weight: 300;
+  font-weight: bold;
+  color: mediumaquamarine;
 }
 
 hr {
