--- a/app/assets/stylesheets/graph.css
+++ b/app/assets/stylesheets/graph.css
@@ -9,7 +9,7 @@
 #titleBox {
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: space-between;;
   align-items: center;
   width: 100%;
   height: 50px;
@@ -22,26 +22,37 @@
 }
 
 #navLogo {
-  position: absolute;
-  left: 10px;
+  margin-left: 10px;
 }
 
 #billboard-logo {
   margin-right: 15px;
 }
 
+#navHeader {
+  margin-right: 60px;
+}
+
 #titleArtist {
   color: #FF6961;
   font-weight: bold;
-  /*margin-right: auto;*/
   margin-right: 7px;
-  /*margin-left: 50px;*/
 }
 
 #titleDate {
-  /*color: #FF6961;*/
   margin-left: 7px;
-  /*margin-right: 50px;*/
+}
+
+.toggle-sound {
+  margin-right: 35px;
+  cursor: pointer;
+  width: 25px;
+  font-size: 25px;
+  transition: all .3s;
+}
+
+.toggle-sound:hover {
+  color: #FF6961;
 }
 
 #trackList {
