--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,7 @@
   <%= javascript_include_tag 'application' %>
   <link rel="icon" type="image/png" href="/favicon.png">
   <link href="https://fonts.googleapis.com/css?family=Roboto:200,300,400" rel="stylesheet">
+  <script src="https://use.fontawesome.com/80a7da554e.js"></script>
   <%= csrf_meta_tags %>
 </head>
 <body>
