--- a/app/assets/stylesheets/datepicker.css
+++ b/app/assets/stylesheets/datepicker.css
@@ -28,6 +28,7 @@
   padding-bottom: 10px;
   cursor: pointer;
   text-align: center;
+  transition: all .3s;
 }
 
 #genreTab {
@@ -39,7 +40,7 @@
   border-radius: 10px 0px 0px 10px;
 }
 
-#genreTab:hover {
+/*#genreTab:hover {
   background-color: #FF6961;
   color: black;
 }
@@ -47,7 +48,7 @@
 #datePickerTab:hover {
   background-color: #FF6961;
   color: black;
-}
+}*/
 
 .decade {
   cursor: default;
