--- a/app/assets/stylesheets/tabs.css
+++ b/app/assets/stylesheets/tabs.css
@@ -1,17 +1,8 @@
-#datePicker {
-  width: 300px;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  justify-content: center;
-  height: 579px;
-  margin-left: 25px;
-  margin-right: 10px;
-}
-
 #tabs {
   height: 600px;
   margin-top: 30px;
+  margin-left: 25px;
+  margin-right: 25px;
 }
 
 #tabHeaders {
@@ -40,15 +31,14 @@
   border-radius: 10px 0px 0px 10px;
 }
 
-/*#genreTab:hover {
-  background-color: #FF6961;
-  color: black;
+#datePicker {
+  width: 300px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+  height: 579px;
 }
-
-#datePickerTab:hover {
-  background-color: #FF6961;
-  color: black;
-}*/
 
 .decade {
   cursor: default;
@@ -109,7 +99,30 @@
 }
 
 #genres {
-  width: 300px;
-  margin-left: 25px;
-  margin-right: 10px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 280px;
+  padding-left: 10px;
+  padding-right: 10px;
+  margin-top: 35px;
+  font-weight: bold;
+}
+
+.genre {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 140px;
+  height: 140px;
+  cursor: pointer;
+  background-size: cover;
+}
+
+#hot100Genre {
+  background-image: url('Hot100.png');
+}
+
+#alternativeGenre {
+  background-image: url('Alternative.png');
 }
