--- a/app/assets/stylesheets/tabs.css
+++ b/app/assets/stylesheets/tabs.css
@@ -102,9 +102,8 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  width: 280px;
-  padding-left: 10px;
-  padding-right: 10px;
+  flex-wrap: wrap;
+  width: 300px;
   margin-top: 35px;
   font-weight: bold;
 }
@@ -117,6 +116,7 @@
   height: 140px;
   cursor: pointer;
   background-size: cover;
+  margin-bottom: 20px;
 }
 
 #hot100Genre {
@@ -125,4 +125,8 @@
 
 #alternativeGenre {
   background-image: url('Alternative.png');
+}
+
+#hiphopGenre {
+  background-image: url('HipHop.png');
 }
