--- a/app/assets/stylesheets/graph.css
+++ b/app/assets/stylesheets/graph.css
@@ -81,9 +81,10 @@
 
 #stagingArea {
   width: 100%;
-  height: 53px;
+  height: 70px;
   background: rgb(0, 0, 0);
   position: relative;
+  top: 61px;
   border-top: 1px solid black;
 }
 
@@ -134,6 +135,16 @@
   animation-timing-function: linear;
   -webkit-animation-iteration-count: infinite;
   animation-iteration-count: infinite;
+}
+
+#chart-wrap-wrapper{
+  display: flex;
+  flex-direction: column;
+  z-index: 10;
+}
+
+#chart-wrap-wrapper #stagingArea {
+  top: 0px;
 }
 
 #chart-wrap {
