--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -47,16 +47,9 @@ body {
    position: absolute;
  }
 
- .toggle-sound {
-   width: 50px;
-   height: 50px;
-   background-color: black;
-   border: 1px solid black;
- }
-
 #mainContainer {
 	display: flex;
 	flex-direction: row;
-	align-items: center;
+	align-items: flex-start;
 	justify-content: flex-start;
 }
