--- a/app/assets/stylesheets/graph.css
+++ b/app/assets/stylesheets/graph.css
@@ -9,7 +9,7 @@
 #titleBox {
   display: flex;
   flex-direction: row;
-  justify-content: flex-end;
+  justify-content: space-between;;
   align-items: center;
   width: 100%;
   height: 50px;
@@ -17,17 +17,42 @@
   border-bottom: 1px solid #ccc;
   color: white;
   font-family: 'Roboto', sans-serif;
+  font-weight: 300;
+  font-size: 20px;
+}
+
+#navLogo {
+  margin-left: 10px;
+}
+
+#billboard-logo {
+  margin-right: 15px;
+}
+
+#navHeader {
+  margin-right: 60px;
 }
 
 #titleArtist {
-  font-size: 20px;
-  margin-right: auto;
-  margin-left: 50px;
+  color: #FF6961;
+  font-weight: bold;
+  margin-right: 7px;
 }
 
 #titleDate {
-  font-size: 16px;
-  margin-right: 50px;
+  margin-left: 7px;
+}
+
+.toggle-sound {
+  margin-right: 35px;
+  cursor: pointer;
+  width: 25px;
+  font-size: 25px;
+  transition: all .3s;
+}
+
+.toggle-sound:hover {
+  color: #FF6961;
 }
 
 #trackList {
@@ -44,21 +69,22 @@
 .trackBox {
   display: flex;
   flex-direction: row;
-  justify-content: flex-start;;
+  justify-content: flex-start;
   align-items: center;
   height: 50px;
-  border-radius: 5px;
+  font-weight: 300;
   width: inherit;
   margin-bottom: 15px;
-  transition: all 2920ms linear;
+  transition: all 2910ms linear;
   font-family: 'Roboto', sans-serif;
 }
 
 #stagingArea {
   width: 100%;
-  height: 53px;
+  height: 70px;
   background: rgb(0, 0, 0);
   position: relative;
+  top: 61px;
   border-top: 1px solid black;
 }
 
@@ -67,4 +93,77 @@
   height: 520px;
   background-color: black;
   border-left: 1px solid white;
+}
+
+@-webkit-keyframes hvr-pulse {
+  25% {
+    -webkit-transform: scale(1.1);
+    transform: scale(1.1);
+  }
+
+  75% {
+    -webkit-transform: scale(0.9);
+    transform: scale(0.9);
+  }
+}
+
+@keyframes hvr-pulse {
+  25% {
+    -webkit-transform: scale(1.1);
+    transform: scale(1.1);
+  }
+
+  75% {
+    -webkit-transform: scale(0.9);
+    transform: scale(0.9);
+  }
+}
+
+.hvr-pulse {
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: translateZ(0);
+  transform: translateZ(0);
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-animation-name: hvr-pulse;
+  animation-name: hvr-pulse;
+  -webkit-animation-duration: 1s;
+  animation-duration: 1s;
+  -webkit-animation-timing-function: linear;
+  animation-timing-function: linear;
+  -webkit-animation-iteration-count: infinite;
+  animation-iteration-count: infinite;
+}
+
+#chart-wrap-wrapper{
+  display: flex;
+  flex-direction: column;
+  z-index: 10;
+}
+
+#chart-wrap-wrapper #stagingArea {
+  top: 0px;
+}
+
+#chart-wrap {
+  display: flex;
+  flex-direction: row;
+  border:none;
+}
+
+#chart-y-axis {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;;
+  align-items: flex-end;
+  height: 529px;
+  margin-top: 46.5px;
+  list-style: none;
+}
+
+#chart-y-axis li {
+  margin-bottom: 36px;
+  font-weight: 300;
 }
