--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,18 @@
   <%= javascript_include_tag 'application' %>
   <link rel="icon" type="image/png" href="/favicon.png">
   <link href="https://fonts.googleapis.com/css?family=Roboto:200,300,400" rel="stylesheet">
+  <script src="https://www.gstatic.com/firebasejs/3.6.4/firebase.js"></script>
+  <script>
+    // Initialize Firebase
+    var config = {
+      apiKey: "AIzaSyB0QvKu_mGljT7_d6dR-Ni__nxBn0ZGXEc",
+      authDomain: "billboardtopten-fdee2.firebaseapp.com",
+      databaseURL: "https://billboardtopten-fdee2.firebaseio.com",
+      storageBucket: "billboardtopten-fdee2.appspot.com",
+      messagingSenderId: "197337384732"
+    };
+    firebase.initializeApp(config);
+  </script>
   <script src="https://use.fontawesome.com/80a7da554e.js"></script>
   <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
